--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <body>
     
     <div class="jumbotron text-center">
-      <h1>My First Bootstrap Page</h1>
+      <h1>Jishin Kathiran</h1>
       <p>Resize this responsive page to see the effect!</p> 
     </div>
       
